--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+  font-kerning: auto;
+  background: green;
   color: red;
 }
